changed the logic to handle the door a bit

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -651,11 +651,11 @@
     <div class="container">
         <div class="content">
             <h1>Coop Door</h1>
-            <div>
+            <!-- <div>
                 <button class="button reference" onclick="generateError()" id="generateError" style="display: block; font-size: 20px; border-radius: 5px; cursor: pointer;">
                     Generate Error
                 </button>
-            </div>
+            </div> -->
             <div class="content" style="display: flex; justify-content: center; align-items: center; text-align: center;">
                 <button class="button reference" id="installButton" style="display: none; font-size: 20px; border-radius: 5px; cursor: pointer;">
                     Install this page as an App on your phone
